--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -24,8 +24,8 @@
 
     <ImageButton
         android:id="@+id/motor1_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
@@ -45,8 +45,8 @@
 
     <ImageButton
         android:id="@+id/motor1_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -56,8 +56,8 @@
     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -67,8 +67,8 @@
 
     <ImageButton
         android:id="@+id/motor2_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -87,8 +87,8 @@
 
     <ImageButton
         android:id="@+id/motor2_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -98,8 +98,8 @@
     <SeekBar
         android:id="@+id/seekBar2"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -109,8 +109,8 @@
 
     <ImageButton
         android:id="@+id/motor3_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
@@ -129,8 +129,8 @@
 
     <ImageButton
         android:id="@+id/motor3_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="48dp"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -140,8 +140,8 @@
     <SeekBar
         android:id="@+id/seekBar3"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
