--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -9,12 +9,15 @@
     android:gravity="center">
 
     <TextView
-        style="@style/GreenText"
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="0dp"
+        android:layout_height="96dp"
+        android:background="@color/sliderBack"
+        android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center_vertical"
         android:text="@string/motor_info"
+        android:textAlignment="center"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +28,9 @@
 
     <ImageButton
         android:id="@+id/motor1_left"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
@@ -36,40 +40,47 @@
         android:id="@+id/textView2"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/motor_a"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar1"
+        app:layout_constraintStart_toStartOf="@+id/seekBar1"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
 
     <ImageButton
         android:id="@+id/motor1_right"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
-    <SeekBar
+    <com.marcinmoskala.arcseekbar.ArcSeekBar
         android:id="@+id/seekBar1"
-        android:layout_width="200dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:progressBackgroundColor="@color/sliderBack"
+        app:progressBackgroundWidth="5dp"
+        app:progressColor="@color/sliderBack"
+        app:progressWidth="5dp" />
 
     <!-- ....... Braccio ........ -->
 
     <ImageButton
         android:id="@+id/motor2_left"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -79,39 +90,50 @@
         android:id="@+id/textView3"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/motor_c"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
+        app:layout_constraintStart_toStartOf="@+id/seekBar2"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
     <ImageButton
         android:id="@+id/motor2_right"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
 
-    <SeekBar
+    <com.marcinmoskala.arcseekbar.ArcSeekBar
         android:id="@+id/seekBar2"
-        android:layout_width="200dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        app:progressBackgroundColor="@color/sliderBack"
+        app:progressBackgroundWidth="5dp"
+        app:progressWidth="5dp"
+        app:progressColor="@color/sliderBack"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- ....... Mano ........ -->
 
     <ImageButton
         android:id="@+id/motor3_left"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
@@ -121,31 +143,39 @@
         android:id="@+id/textView4"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/motor_d"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
+        app:layout_constraintStart_toStartOf="@+id/seekBar3"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
 
     <ImageButton
         android:id="@+id/motor3_right"
-        android:layout_width="64dp"
+        android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@drawable/round_button"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 
-    <SeekBar
+    <com.marcinmoskala.arcseekbar.ArcSeekBar
         android:id="@+id/seekBar3"
-        android:layout_width="200dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:progressBackgroundColor="@color/sliderBack"
+        app:progressBackgroundWidth="5dp"
+        app:progressColor="@color/sliderBack"
+        app:progressWidth="5dp" />
 
 
     <!-- ....... Velocità ........ -->
@@ -154,11 +184,11 @@
         android:id="@+id/speed_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="64dp"
         android:checked="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3"
         tools:checked="false" />
 
 </android.support.constraint.ConstraintLayout>
