--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
-        android:layout_height="96dp"
+        android:layout_height="80dp"
         android:background="@color/sliderBack"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_vertical"
@@ -28,8 +28,8 @@
 
     <ImageButton
         android:id="@+id/motor1_left"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:background="@drawable/round_button"
         android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -38,20 +38,23 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="112dp"
         android:text="@string/motor_a"
         android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/seekBar1"
-        app:layout_constraintStart_toStartOf="@+id/seekBar1"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/motor1_right"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:background="@drawable/round_button"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -59,127 +62,80 @@
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
-    <com.marcinmoskala.arcseekbar.ArcSeekBar
-        android:id="@+id/seekBar1"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:progressBackgroundColor="@color/sliderBack"
-        app:progressBackgroundWidth="5dp"
-        app:progressColor="@color/sliderBack"
-        app:progressWidth="5dp" />
-
     <!-- ....... Braccio ........ -->
 
     <ImageButton
         android:id="@+id/motor2_left"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_left"
         android:rotation="-90"
+        android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="144dp"
         android:text="@string/motor_c"
         android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
-        app:layout_constraintStart_toStartOf="@+id/seekBar2"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/motor2_right"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/motor2_right"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_right"
         android:rotation="-90"
+        android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
-
-
-    <com.marcinmoskala.arcseekbar.ArcSeekBar
-        android:id="@+id/seekBar2"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        app:progressBackgroundColor="@color/sliderBack"
-        app:progressBackgroundWidth="5dp"
-        app:progressWidth="5dp"
-        app:progressColor="@color/sliderBack"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- ....... Mano ........ -->
 
     <ImageButton
         android:id="@+id/motor3_left"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_left"
         android:rotation="-90"
+        android:src="@drawable/arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/motor_d"
+        android:layout_marginTop="144dp"
+        android:text="Mano"
         android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
-        app:layout_constraintStart_toStartOf="@+id/seekBar3"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/motor3_left"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/motor3_right"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_right"
         android:rotation="-90"
+        android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
-
-
-    <com.marcinmoskala.arcseekbar.ArcSeekBar
-        android:id="@+id/seekBar3"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:progressBackgroundColor="@color/sliderBack"
-        app:progressBackgroundWidth="5dp"
-        app:progressColor="@color/sliderBack"
-        app:progressWidth="5dp" />
 
 
     <!-- ....... Velocità ........ -->
@@ -196,14 +152,32 @@
         tools:checked="false" />
 
     <Button
-        android:id="@+id/go_button"
+        android:id="@+id/pick_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:text="Go"
+        android:text="Pick up"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView5" />
+
+    <Button
+        android:id="@+id/put_down_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Put Down"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="340dp" />
 
 </android.support.constraint.ConstraintLayout>
