--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#004aca</color>
     <color name="sliderBack">#d7d7d7</color>
 
-    <color name="mBlu">#005bf7</color>
-    <color name="mLightBlu">#00d9ff</color>
-    <color name="mVeryBlu">#0015ff</color>
+    <color name="mBlu">#206cbb</color>
+    <color name="mLightBlu">#679cd4</color>
+    <color name="mVeryBlu">#0a54a0</color>
 </resources>
