--- a/app/src/main/res/drawable/round_cornered_button.xml
+++ b/app/src/main/res/drawable/round_cornered_button.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
-        <shape android:shape="oval">
-            <solid android:color="@color/mVeryBlu"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/mLightBlu"/>
+            <corners android:radius="10dp"></corners>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="@color/mLightBlu"/>
+            <solid android:color="@color/mVeryBlu"/>
         </shape>
     </item>
 </selector>
