--- a/app/src/main/res/layout/activity_motor_multi_p1.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p1.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -10,18 +10,20 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentTop="true"
+        android:layout_height="80dp"
+        android:background="@color/mBlu"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:background="@color/sliderBack"
         android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center_vertical"
         android:text="Controllo motori - Player 1"
+        android:textAlignment="center"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <!-- ....... Base ........ -->
@@ -30,33 +32,36 @@
         android:id="@+id/m_motor1_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="110dp"
-        android:layout_toLeftOf="@+id/textView2"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_left" />
+        android:src="@drawable/arrow_left"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintRight_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="96dp"
         android:text="@string/motor_a"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
         android:id="@+id/m_motor1_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="110dp"
-        android:layout_toRightOf="@+id/textView2"
         android:background="@drawable/round_button"
-        android:src="@drawable/arrow_right" />
+        android:src="@drawable/arrow_right"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
     <!-- ....... Braccio ........ -->
@@ -65,35 +70,36 @@
         android:id="@+id/m_motor2_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="190dp"
-        android:layout_toRightOf="@+id/textView2"
         android:background="@drawable/round_button"
         android:rotation="-90"
-        android:src="@drawable/arrow_left" />
+        android:src="@drawable/arrow_left"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="80dp"
         android:text="@string/motor_c"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
         android:id="@+id/m_motor2_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="190dp"
-        android:layout_toLeftOf="@+id/textView3"
         android:background="@drawable/round_button"
         android:rotation="-90"
-        android:src="@drawable/arrow_right" />
+        android:src="@drawable/arrow_right"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
 
     <!-- ....... Mano ........ -->
@@ -101,4 +107,4 @@
 
     <!-- ....... Velocità ........ -->
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
