--- a/app/src/main/res/layout/activity_motor_multi_p2.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -17,54 +17,67 @@
     <!-- ....... Mano ........ -->
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="337dp" />
+
+    <TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentTop="true"
+        android:layout_height="80dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:background="@color/sliderBack"
+        android:background="@color/mBlu"
         android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center_vertical"
         android:text="Controllo motori - Player 2"
+        android:textAlignment="center"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/motor3_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentEnd="false"
-        android:layout_marginTop="60dp"
-        android:layout_toLeftOf="@+id/textView4"
         android:background="@drawable/round_button"
         android:rotation="-90"
-        android:src="@drawable/arrow_left" />
+        android:src="@drawable/arrow_left"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
         android:text="Mano"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <ImageButton
         android:id="@+id/motor3_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_alignParentBottom="false"
-        android:layout_marginTop="60dp"
-        android:layout_toRightOf="@+id/textView4"
         android:background="@drawable/round_button"
         android:rotation="-90"
-        android:src="@drawable/arrow_right" />
+        android:src="@drawable/arrow_right"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 
     <!-- ....... Velocità ........ -->
@@ -73,29 +86,30 @@
         android:id="@+id/speed_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/put_down_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:checked="false" />
+        android:layout_marginBottom="64dp"
+        android:checked="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/pick_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="Pick up" />
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Pick up"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView7" />
 
     <Button
         android:id="@+id/put_down_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="Put Down" />
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Put Down"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
