--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -13,10 +13,12 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:background="@color/mBlu"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="@string/motor_info"
         android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,9 +45,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="112dp"
+        android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_a"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,9 +85,12 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="144dp"
+        android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_c"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/motor2_right"
         app:layout_constraintTop_toTopOf="parent" />
@@ -119,9 +127,12 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="144dp"
+        android:fontFamily="@font/fjalla_one"
         android:text="Mano"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/motor3_left"
         app:layout_constraintTop_toTopOf="parent" />
@@ -153,24 +164,31 @@
 
     <Button
         android:id="@+id/pick_up_button"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
         android:text="Pick up"
         android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5" />
 
     <Button
         android:id="@+id/put_down_button"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
         android:text="Put Down"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
