--- a/app/src/main/res/layout/activity_motor_multi_p1.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p1.xml
@@ -12,18 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/mBlu"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="Controllo motori - Player 1"
         android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- ....... Base ........ -->
@@ -44,9 +42,12 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="96dp"
+        android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_a"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -81,10 +82,13 @@
         android:id="@+id/textView3"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="72dp"
+        android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_c"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintLeft_toLeftOf="parent"
