--- a/app/src/main/res/layout/activity_motor_multi_p2.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p2.xml
@@ -29,19 +29,17 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
         android:background="@color/mBlu"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="Controllo motori - Player 2"
         android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/motor3_left"
@@ -58,9 +56,12 @@
         android:id="@+id/textView4"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/fjalla_one"
         android:text="Mano"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
@@ -94,11 +95,16 @@
 
     <Button
         android:id="@+id/pick_up_button"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
         android:text="Pick up"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView7" />
 
@@ -108,7 +114,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
         android:text="Put Down"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7" />
 
