--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:background="@color/mBlu"
+        android:background="@color/mGreen"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="@string/motor_info"
@@ -32,8 +32,8 @@
         android:id="@+id/motor1_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/arrow_left"
+        android:background="@drawable/rotation"
+        android:scaleX="-1"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -60,8 +60,7 @@
         android:id="@+id/motor1_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/arrow_right"
+        android:background="@drawable/rotation"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -73,9 +72,8 @@
         android:id="@+id/motor2_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:rotation="-90"
-        android:src="@drawable/arrow_left"
+        android:background="@drawable/arrow"
+        android:rotation="90"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -100,9 +98,8 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/arrow"
         android:rotation="-90"
-        android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/check_color_button"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -115,9 +112,8 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginStart="20dp"
-        android:background="@drawable/round_button"
-        android:rotation="-90"
-        android:src="@drawable/arrow_left"
+        android:background="@drawable/arrow"
+        android:rotation="90"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/check_color_button"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
@@ -141,9 +137,8 @@
         android:id="@+id/motor3_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/arrow"
         android:rotation="-90"
-        android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
