--- a/app/src/main/res/drawable/round_cornered_button.xml
+++ b/app/src/main/res/drawable/round_cornered_button.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/mLightBlu"/>
+            <solid android:color="@color/mLightGreen"/>
             <corners android:radius="10dp"></corners>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/mVeryBlu"/>
+            <solid android:color="@color/mVeryGreen"/>
             <corners android:radius="10dp"></corners>
         </shape>
     </item>
