--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -26,7 +26,7 @@
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/mBlu"
+        android:background="@color/mGreen"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="Main Menu"
