--- a/app/src/main/res/layout/activity_motor_multi_p1.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p1.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/mBlu"
+        android:background="@color/mGreen"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="Controllo motori - Player 1"
