--- a/app/src/main/res/layout/activity_motor_multi_p2.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p2.xml
@@ -36,7 +36,7 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/mBlu"
+        android:background="@color/mGreen"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical"
         android:text="Controllo motori - Player 2"
