--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,16 +3,16 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/mBlu</item>
-    <item name="colorPrimaryDark">@color/mLightBlu</item>
-    <item name="colorAccent">@color/mVeryBlu</item>
+    <item name="colorPrimary">@color/mGreen</item>
+    <item name="colorPrimaryDark">@color/mLightGreen</item>
+    <item name="colorAccent">@color/mVeryGreen</item>
 </style>
 
     <style name="AppThemeNavBar" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/mBlu</item>
-        <item name="colorPrimaryDark">@color/mLightBlu</item>
-        <item name="colorAccent">@color/mVeryBlu</item>
+        <item name="colorPrimary">@color/mGreen</item>
+        <item name="colorPrimaryDark">@color/mLightGreen</item>
+        <item name="colorAccent">@color/mVeryGreen</item>
     </style>
 
     <style name="GreenText" parent="TextAppearance.AppCompat">
