--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,22 +5,8 @@
     android:id="@+id/mainMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mColorWhite"
     tools:context=".Activity.MainMenuActivity">
-
-    <TextView
-        android:id="@+id/t_main_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="40dp"
-        android:text="Accesso alla modalità di gioco (tap per continuare)"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
@@ -43,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
@@ -60,11 +46,11 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
-        android:text="INSTRUCTIONS"
+        android:text="Istruzioni"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -77,7 +63,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
@@ -86,34 +72,26 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mount_instructions" />
+        app:layout_constraintTop_toBottomOf="@+id/segnalazioni" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"/>
-
-    <TextView
-        android:id="@+id/welcome_text"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/segnalazioni"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
-        android:text="PRIMO ACCESSO! Ciao coglione, benvenuto nella nosta magnifica app!! Siccome, come dicevo, sei un coglione, non sarai probabilmente in grado di capire come funzionano le cose, quindi te lo spiego io. Segui le istruzioni che seguono per imparare a navigare nell'app. Tap per continuare "
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
+        android:text="Segnalazioni"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/mount_instructions" />
 
 </android.support.constraint.ConstraintLayout>
