--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -243,30 +243,35 @@
 
     <TextView
         android:id="@+id/seconds_textBox"
-        android:layout_width="150dp"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/fjalla_one"
         android:text="TextView"
         android:textAlignment="center"
         android:textAllCaps="true"
+        android:textColor="@color/mVeryGreen"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/pick_up_button"
         app:layout_constraintEnd_toStartOf="@+id/pick_up_button"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/pick_up_button" />
 
     <Button
         android:id="@+id/stopButton"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/fjalla_one"
         android:text="STOP"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:background="@drawable/round_cornered_button_red"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/put_down_button" />
 
     <ImageView
         android:id="@+id/blockPlaced_1"
