--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,11 +9,14 @@
     <color name="mLightGreen">#48B084</color>
     <color name="mVeryGreen">#02681d</color>
     <color name="mGrey">#545759</color>
+    <color name="mLightGrey">#c4e5e5e5</color>
 
     <color name="mColorBlue">#004081</color>
     <color name="mColorYellow">#c9bb00</color>
     <color name="mColorRed">#c90a0a</color>
+    <color name="mButtonRed">#ff3838</color>
+    <color name="mPressedButtonRed">#801616</color>
     <color name="mColorBlack">#101010</color>
     <color name="mColorWhite">#ffffff</color>
-    <color name="mColorTrasparent">#00000000</color>
+    <color name="mColorTrasparent">#24ffffff</color>
 </resources>
