--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -13,18 +13,18 @@
         android:id="@+id/motor2_left2"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/arrow"
         android:rotation="90"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickmanosx"
+        app:layout_constraintTop_toTopOf="@+id/clickmanosx"
+        tools:layout_editor_absoluteX="20dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:text="Mano"
@@ -33,38 +33,38 @@
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/clickmanosx"
-        app:layout_constraintEnd_toStartOf="@+id/motor2_right"
-        app:layout_constraintStart_toEndOf="@+id/motor2_left2"
-        app:layout_constraintTop_toTopOf="@+id/clickmanosx" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <ImageView
         android:id="@+id/motor2_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/arrow"
         android:rotation="90"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickmanodx"
+        app:layout_constraintStart_toEndOf="@+id/clickmanodx"
+        app:layout_constraintTop_toTopOf="@+id/clickmanodx" />
 
     <ImageView
         android:id="@+id/motor3_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/arrow"
         android:rotation="90"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/motor2_right" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickbracciodx"
+        app:layout_constraintStart_toEndOf="@+id/clickbracciodx"
+        app:layout_constraintTop_toTopOf="@+id/clickbracciodx" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_c"
@@ -73,38 +73,38 @@
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/clickbracciosx"
-        app:layout_constraintEnd_toStartOf="@+id/motor3_left"
-        app:layout_constraintStart_toEndOf="@+id/motor3_right"
-        app:layout_constraintTop_toTopOf="@+id/clickbracciosx" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
         android:id="@+id/motor3_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/arrow"
         android:rotation="90"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/motor2_left2" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickbracciosx"
+        app:layout_constraintEnd_toStartOf="@+id/clickbracciosx"
+        app:layout_constraintTop_toTopOf="@+id/clickbracciosx" />
 
     <ImageView
         android:id="@+id/motor1_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/rotation"
         android:scaleX="-1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/motor3_right" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickbasesx"
+        app:layout_constraintEnd_toStartOf="@+id/clickbasesx"
+        app:layout_constraintTop_toTopOf="@+id/clickbasesx" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:text="@string/motor_a"
@@ -113,20 +113,19 @@
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/clickbasesx"
-        app:layout_constraintEnd_toStartOf="@+id/motor1_right"
-        app:layout_constraintStart_toEndOf="@+id/motor1_left"
-        app:layout_constraintTop_toTopOf="@+id/clickbasesx" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ImageButton
         android:id="@+id/motor1_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/rotation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/motor3_left" />
+        app:layout_constraintBottom_toBottomOf="@+id/clickbasedx"
+        app:layout_constraintStart_toEndOf="@+id/clickbasedx"
+        app:layout_constraintTop_toTopOf="@+id/clickbasedx" />
 
 
     <TextView
@@ -150,26 +149,26 @@
         android:id="@+id/textView5"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="right|center_vertical"
         android:text="TIME :"
+        android:textAlignment="textEnd"
         android:textSize="24sp"
         android:typeface="monospace"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintBottom_toBottomOf="@+id/timeText"
+        app:layout_constraintEnd_toStartOf="@+id/timeText"
+        app:layout_constraintTop_toTopOf="@+id/timeText" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="185dp"
         android:layout_height="45dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="113dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical|center_horizontal"
         android:text="NUMERI DI CLICK:"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,107 +179,94 @@
         android:id="@+id/timeText"
         android:layout_width="162dp"
         android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="left|clip_vertical|clip_horizontal"
         android:text="00:00:00"
+        android:textAlignment="center"
+        android:textColor="@color/mColorBlack"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/clickmanosx"
         android:layout_width="60dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical|center_horizontal"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor2_left2"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
-        app:layout_constraintStart_toEndOf="@+id/motor2_left2"
-        app:layout_constraintTop_toTopOf="@+id/motor2_left2" />
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/clickmanodx"
         android:layout_width="60dp"
         android:layout_height="45dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical|center_horizontal"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor2_right"
-        app:layout_constraintEnd_toStartOf="@+id/motor2_right"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/motor2_right" />
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/clickbracciodx"
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor3_left"
-        app:layout_constraintEnd_toStartOf="@+id/motor3_left"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/motor3_left" />
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/clickbracciosx"
         android:layout_width="60dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical|center_horizontal"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor3_right"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/motor3_right"
-        app:layout_constraintTop_toTopOf="@+id/motor3_right" />
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/clickbasesx"
         android:layout_width="60dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor1_left"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/motor1_left"
-        app:layout_constraintTop_toTopOf="@+id/motor1_left" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/clickbasedx"
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center"
         android:text="00"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/motor1_right"
-        app:layout_constraintEnd_toStartOf="@+id/motor1_right"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/motor1_right" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 </android.support.constraint.ConstraintLayout>
