--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -14,6 +14,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/blockPlaced_3"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
@@ -24,6 +25,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/blockPlaced_2"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
@@ -279,6 +281,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
@@ -289,6 +292,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/blockPlaced_1"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
