--- a/app/src/main/res/layout/activity_motor_multi_p1.xml
+++ b/app/src/main/res/layout/activity_motor_multi_p1.xml
@@ -30,8 +30,8 @@
         android:id="@+id/m_motor1_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/arrow_left"
+        android:background="@drawable/rotation"
+        android:scaleX="-1"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintRight_toLeftOf="@+id/textView2"
@@ -57,8 +57,7 @@
         android:id="@+id/m_motor1_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:src="@drawable/arrow_right"
+        android:background="@drawable/rotation"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -71,9 +70,8 @@
         android:id="@+id/m_motor2_left"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
-        android:rotation="-90"
-        android:src="@drawable/arrow_left"
+        android:background="@drawable/arrow"
+        android:rotation="90"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -98,9 +96,8 @@
         android:id="@+id/m_motor2_right"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="@drawable/round_button"
+        android:background="@drawable/arrow"
         android:rotation="-90"
-        android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
